add_compile_options(-Wall -rdynamic -Wformat-security -g)
#add_executable(panda_server panda_server.cpp panda_debug.cpp panda_procedure.cpp)
#add_executable(panda_monitor )
#target_link_libraries(panda_server iniparser st execinfo)

add_executable(forward forward.cpp forward_interface.cpp balancer_interface.cpp)
target_link_libraries(forward pthread)
add_executable(balancer balancer.cpp balancer_interface.cpp)
add_executable(monitor monitor.cpp)
add_executable(dragon_warrior dragon_warrior.cpp balancer_interface.cpp forward_interface.cpp)
target_link_libraries(dragon_warrior pthread)
add_library(echo MODULE echo.cpp)
